<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="app_name">Big Neon Studio</string>
    <string name="big_neon_studio">Big Neon Studio</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password (at least 6 characters)</string>
    <string name="reset_your_password"><![CDATA[Reset your password >]]></string>
    <string name="event_image">Event image</string>
    <string name="event_right_arrow">Event right arrow</string>
    <string name="title_activity_scanning_event">ScanningEventActivity</string>
    <string name="back_button_scanning_event_title">Manage events</string>
    <string name="back_button_ticket_list_title">Scan Tickets</string>
    <string name="manage_events">Manage events</string>
    <string name="scanning_event">Scanning Event</string>
    <string name="scan_tickets">Scan Tickets</string>
    <string name="_1_d_of_2_d_redeemed">%1$d of %2$d redeemed</string>
    <string name="_1_d_checked">%1$d checked</string>
    <string name="scan_tickets_icon">Scan tickets icon</string>
    <string name="calculating">Calculating…</string>
    <string name="check_in_mode">Check-in Mode:</string>
    <string name="manual">MANUAL</string>
    <string name="automatic">AUTOMATIC</string>
    <string name="exit_scan_tickets">Exit scan tickets</string>
    <string name="search_for_guests">Search for guests</string>
    <string name="redeemed">REDEEMED</string>
    <string name="checked">CHECKED</string>
    <string name="purchased">PURCHASED</string>
    <string name="duplicate">DUPLICATE</string>
    <string name="last_name_first_name">%1$s, %2$s</string>
    <string name="price_ticket_type">$%1$d | %2$s</string>
    <string name="guest_list">Guest List</string>
    <string name="back_to_list">Back to list</string>
    <string name="complete_check_in">Complete Check-In</string>
    <string name="already_checked_in">Already checked-in</string>
    <string name="no_guests_found">No guests found.</string>
    <string name="no_guests_found_placeholder_icon">No guests found placeholder icon</string>
    <string name="turn_on_wifi">Turn ON WiFi</string>
    <string name="settings">Settings</string>
    <string name="profile_settings">Profile settings</string>
    <string name="log_out">Log out</string>
    <string name="enable_offline_mode">Enable offline mode</string>
    <string name="disable_offline_mode">Disable offline mode</string>
    <string name="offline_mode_enabled">Offline mode is ENABLED</string>
    <string name="offline_mode_disabled">Offline mode is DISABLED</string>
    <string name="warning">WARNING!</string>
    <string name="duplicate_ticket_msg">Duplicate ticket detected!!!\nTicket has already been redeemed!\n\nTicket: %1$s\nUser: %2$s\nRedeemed by: %3$s\nRedeemed at: %4$s</string>
    <string name="go_back">GO BACK</string>
    <string name="ticket_id">Ticket ID</string>
    <string name="reading_ticket">Reading ticket</string>
    <string name="no_internet_icon">No internet icon</string>
    <string name="show">SHOW</string>
    <string name="hide">HIDE</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="please_enter_a_valid_password">Please enter a valid password</string>
    <string name="pill_checked_status_image">Pill checked status image</string>
    <string name="pill_user_image">Pill user image</string>
    <string name="cpb_textIdle">Login to your account</string>
    <string name="cpb_textComplete">Login success!</string>
    <string name="cpb_textError">Invalid Email/Password</string>
    <string name="pill_scanned_by_text">Scanned by: %1$s</string>
    <string name="zxscan_ok_image">Scan OK image</string>
    <string name="zxscan_error_image">Scan ERROR image</string>
    <string name="loading_tickets_is_about_to_begin">Loading tickets is about to begin...</string>
    <string name="loading_tickets_waiting_for_network">Loading tickets is waiting for network...</string>
    <string name="base_url">Base URL:</string>
    <string name="change_base_url">Change Base URL</string>
</resources>
