<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ticket_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        tools:context=".activity.TicketActivity">

    <LinearLayout
            android:id="@+id/ticket_item_data"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/last_name_and_first_name"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/last_name_first_name"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights"/>

            <TextView
                    android:id="@+id/redeemed_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/redeemed"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/redeemed_status_background"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="visible"/>

            <ImageView
                    android:id="@+id/checked_no_internet"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:src="@drawable/no_internet"
                    android:contentDescription="@string/no_internet_icon"
                    android:visibility="gone"/>

            <TextView
                    android:id="@+id/checked_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/checked"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/checked_status_background"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"/>

            <TextView
                    android:id="@+id/duplicate_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/duplicate"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/duplicate_status_background"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"/>

            <TextView
                    android:id="@+id/purchased_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/purchased"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/purchased_status_background"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"/>
        </LinearLayout>

        <TextView
                android:id="@+id/price_and_ticket_type"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/price_ticket_type"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="normal"/>

        <TextView
                android:id="@+id/ticket_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ticket_id"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="normal"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@color/colorWhite"
            style="?android:attr/buttonBarStyle"
            android:layout_height="100dp">

        <Button
                android:id="@+id/back_to_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="5dp"
                android:text="@string/back_to_list"
                android:background="@drawable/back_to_list_btn_background"
                android:textAllCaps="false"/>

        <Button
                android:id="@+id/complete_check_in"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_marginStart="5dp"
                android:text="@string/complete_check_in"
                android:textColor="@color/colorWhite"
                android:background="@drawable/complete_check_in_btn_background"
                android:textAllCaps="false"
                android:visibility="gone"
                />
    </LinearLayout>
</LinearLayout>