<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/scanning_event_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_scanning_event"
        android:orientation="vertical"
        tools:context=".activity.ScanningEventActivity">

    <TextView
            android:id="@+id/scanning_event_name"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:text="@string/scanning_event"/>

    <LinearLayout
            android:id="@+id/scanning_events_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/scan_tickets_button_background"
            android:layout_margin="20dp">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/scan_tickets_icon"
                android:src="@drawable/scan_tickets_icon"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorAccent"
                android:text="@string/scan_tickets"/>
    </LinearLayout>

    <TextView
            android:id="@+id/number_of_redeemed"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:text="@string/calculating"/>
    <TextView
            android:id="@+id/number_of_checked"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:text="@string/calculating"/>
</LinearLayout>