<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">

    <RelativeLayout
            android:id="@+id/guest_item_content"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

        <LinearLayout
                android:id="@+id/guest_item_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_toStartOf="@+id/event_right_arrow">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/last_name_and_first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/last_name_first_name"
                        android:gravity="center_vertical"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/redeemed_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/redeemed"
                        android:textColor="@color/colorWhite"
                        android:gravity="center_vertical"
                        android:background="@drawable/redeemed_status_background"
                        android:layout_marginStart="10dp"
                        android:padding="5dp"/>

                <TextView
                        android:id="@+id/purchased_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/purchased"
                        android:textColor="@color/colorWhite"
                        android:gravity="center_vertical"
                        android:background="@drawable/purchased_status_background"
                        android:layout_marginStart="10dp"
                        android:padding="5dp"
                        android:visibility="gone"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/price_and_ticket_type"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/price_ticket_type"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="normal"/>
        </LinearLayout>

        <ImageView
                android:id="@+id/event_right_arrow"
                android:layout_width="50dp"
                android:padding="15dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/event_right_arrow"
                android:src="@drawable/right_arrow"
                android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"
            android:layout_below="@+id/guest_item_content"/>

</RelativeLayout>
