<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_duplicate_ticket_checkin"
        tools:context=".activity.DuplicateTicketCheckinActivity"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/warning"
            android:textSize="48sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center"/>

    <TextView
            android:id="@+id/duplicate_ticket_msg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/duplicate_ticket_msg"
            android:textSize="32sp"
            android:padding="10dp"
            android:gravity="center"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/scan_tickets_button_background"
            android:layout_margin="20dp">

        <TextView
                android:id="@+id/duplicate_ticket_go_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/go_back"
                android:textSize="32sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="bottom"/>
    </LinearLayout>

</LinearLayout>