<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_login"
            tools:context=".activity.LoginActivity">

    <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

        <TextView
                android:id="@+id/turn_on_wifi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:background="@color/colorAccent"
                android:hint="@string/turn_on_wifi"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:visibility="gone"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:text="@string/welcome_back"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:background="@color/edit_text_background"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:textSize="14sp"/>

        <TextView
                android:id="@+id/email_address_message"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:text="@string/please_enter_your_email_address"
                android:textColor="@color/colorAccent"
                android:visibility="invisible"/>

        <LinearLayout
                android:id="@+id/password_with_show_hide"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

            <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@color/edit_text_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:textSize="14sp"/>

            <TextView
                    android:id="@+id/show_hide_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/show"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/colorAccent"
                    android:background="@color/edit_text_background"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    />

        </LinearLayout>

        <TextView
                android:id="@+id/password_message"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:text="@string/please_enter_a_valid_password"
                android:textColor="@color/colorAccent"
                android:visibility="invisible"/>

        <com.dd.CircularProgressButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:gravity="center"
                app:cpb_cornerRadius="4dp"
                app:cpb_textIdle="@string/login_to_your_account_lowercase"
                app:cpb_textComplete="Login success!"
                app:cpb_textError="Login failed!"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/reset_your_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/reset_your_password"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"/>
    </LinearLayout>
</ScrollView>