<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tickets_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_ticket_list"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".activity.TicketListActivity">

    <TextView
            android:id="@+id/ticket_list_label"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/guest_list"
            android:background="@color/colorWhite"
            android:textColor="@android:color/darker_gray"
            android:textSize="24sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>

    <EditText
            android:id="@+id/search_guest"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/search_for_guests"
            android:maxLines="1"
            android:inputType="text"
            android:background="@drawable/search_button_background"
            tools:ignore="Autofill"
            android:nextFocusUp="@id/search_guest"
            android:nextFocusLeft="@id/search_guest"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/ticket_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        <requestFocus/>
    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
            android:id="@+id/no_guests_found_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

            <ImageView
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:src="@drawable/icon_empty_state"
                    android:contentDescription="@string/no_guests_found_placeholder_icon"
                    android:layout_gravity="center"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:text="@string/no_guests_found"/>
        </LinearLayout>

        <ProgressBar
                android:id="@+id/loading_guests_progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
    </RelativeLayout>
</LinearLayout>
